@@ -7,6 +7,7 @@
        was inversed. (Stefan)
 - BUG: The bugtraq: and tsvn: property values weren't correctly handled if
        they contained non-ASCII chars. (Stefan)
+- BUG: Comparing two files from the revision graph didn't work. (Stefan)
 
 Version 1.2.1
 - NEW: The path of the working copy is shown in the dialog title for
